# cleverbotfree

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml  python-publish.yml  tests.yml
cleverbotfree/: __init__.py  cbfree.py
examples/: session_chat.py  single_chat.py
